--- a/settings.toml
+++ b/settings.toml
@@ -1,9 +1,9 @@
 [default]
 key = "value"
-databases = { default = { db_url = "postgresql+psycopg://postgres:changeit@127.0.0.1:5432/workspace" } }
-pg_url = "postgresql+psycopg://postgres:changeit@127.0.0.1:5432/workspace"
-pg_a_url = "postgresql+psycopg_async://postgres:changeit@127.0.0.1:5432/workspace"
+databases = { default = { db_url = "postgresql+psycopg://postgres:postgres@127.0.0.1:5432/" } }
+pg_url = "postgresql+psycopg://postgres:postgres@127.0.0.1:5432/"
+pg_a_url = "postgresql+psycopg_async://postgres:postgres@127.0.0.1:5432/"
 
 [test]
 key = "abc"
-databases.default.url = "postgresql+psycopg_async://postgres:changeit@127.0.0.1:5432/workspace"
+databases.default.url = "postgresql+psycopg_async://postgres:postgres@127.0.0.1:5432/"
