--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,37 +1,24 @@
-name: build
+name: Python PDM Project CI
 
-on: [push, pull_request]
+on: [push,pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.11"]
-
+  
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install pdm
-        run: pipx install pdm
-
-      - name: Set up cache
-        uses: actions/cache@v4.2.0
-        with:
-          path: .venv
-          key: venv-${{ matrix.python-version }}-${{ hashFiles('pyproject.toml') }}-${{ hashFiles('poetry.lock') }}
-      - name: Install dependencies
-        run: |
-          pdm install
-
-      - name: Run test and code styles
-        run: |
-          pdm test
-          pdm cleanup
-
-      - name: deploy docs
-        run: pdm docs-deploy
+    - name: checkout repo
+      uses: actions/checkout@v4
+    - name: Install uv
+      uses: astral-sh/setup-uv@v4
+      with:
+        enable-cache: true  # Enable caching for faster builds
+        version: "latest"  # Specify the version of uv to install
+      # You are now able to use PDM in your workflow
+    - name: Install dependencies
+      run: uv sync
+    - name: run tests and coverage report
+      run: |
+        uv run cov
+        uv run check_format
+        uv run badge
