--- a/.gitignore
+++ b/.gitignore
@@ -617,3 +617,4 @@ healthchecksdb
 MigrationBackup/
 
 # End of https://www.gitignore.io/api/osx,python,pycharm,windows,visualstudio,visualstudiocode
+allure-results/
